# android_maven_error

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bzlmod  maven_install.json
src/main/: BUILD
src/main/java/com/example/bazel/: BUILD  MainActivity.java
