bazel_dep(name = "rules_android", version = "0.5.1", dev_dependency = True)
bazel_dep(name = "rules_jvm_external", version = "6.5", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "my_maven",
    artifacts = [
        "androidx.appcompat:appcompat:1.4.0",
    ],
    repositories = [
        "https://maven.google.com/",
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "my_maven")
